Added elementary nesting code for the survey

--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -21,4 +21,8 @@
     <%= f.text_field :rq_score %>
   </p>
   <p><%= f.submit "Submit" %></p>
+
+  <% f.fields_for :response do |r| %>
+  <% end %>
+
 <% end %>
