--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -34,6 +34,7 @@
     <%# Assemble response form from properties of the associated question %>
   	<%= r.label :value, r.object.question.text %><br />
 	<%# todo: randomize directions %>
+
 	<div class="slide">
 		<div align="left" class="left-label">
 			<%= r.object.question.lower_title %>
@@ -41,12 +42,19 @@
 		<div align="right" class="right-label">
 			<%= r.object.question.upper_title %>
 		</div>
-		<div class="slider" id="slider_<%= r.object.question.id %>"></div>
+		<div class="slider" id="slider_<%= r.object.question.id - 1 %>"></div>
 	</div>
 	<script type="text/javascript">
-		$("#slider_<%= r.object.question.id %>").slider( { max: 10, min: 0, value: <%= r.object.value %> } );
+		$("#slider_<%= r.object.question.id - 1 %>").slider({ 
+			max: 10, 
+			min: 1, 
+			value: <%= r.object.value %>,
+			change: function(event, ui) {
+				$("#survey_responses_attributes_<%= r.object.question.id - 1 %>_value").val(ui.value);
+			}
+		} );
 	</script>
-	<%= r.select :value, 1..10 %>
+	<%= r.hidden_field :value, :value => r.object.value %>
 	<%= r.hidden_field :question_id, :value => r.object.question.id %>
 	<br /><br />
   <% end %>
