Commented out rails nav links

--- a/app/views/surveys/new.html.erb
+++ b/app/views/surveys/new.html.erb
@@ -1,5 +1,8 @@
-<% title "New Survey" %>
+<% title "RI Assessment" %>
 
 <%= render :partial => 'form' %>
 
+<!--
 <p><%= link_to "Back to List", surveys_path %></p>
+-->
+<p>&nbsp;</p>
