--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
 	<script type="text/javascript" src="http://jqueryui.com/latest/jquery-1.3.2.js"></script>
 	<script type="text/javascript" src="http://jqueryui.com/latest/ui/ui.core.js"></script>
 	<script type="text/javascript" src="http://jqueryui.com/latest/ui/ui.slider.js"></script>
+	<script type="text/javascript" src="http://jqueryui.com/latest/ui/ui.tabs.js"></script>
+	<script type="text/javascript" src="http://jqueryui.com/latest/ui/ui.progressbar.js"></script>
 
     <%= javascript_include_tag 'application' %>
     <%= yield(:head) %>
@@ -29,5 +31,9 @@
       
       <%= yield %>
     </div>
+	<div align="center" class="footer">
+	  <p>&copy;2009 Relational Intellegence.  All Rights Reserved.
+	  &nbsp;&nbsp;Comments? Please contact us via <a href="mailto:webmaster@relationalintelligence.info">e-mail</a>.</p>
+	</div>
   </body>
 </html>
