--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -94,7 +94,6 @@ a {
   float: right;
   padding: 0px 0px 0px 10px;
   width: 90px;
-  height: 20px;
 }
 
 .left-label {
@@ -102,7 +101,14 @@ a {
   float: left;
   padding: 0px 0px 0px 0px;
   width: 90px;
-  height: 20px;
+}
+
+.progress {
+  width: 400px;
+  margin-left: 150px;
+  margin-right: 150px;
+  height: 10px;
+  padding: 0px;
 }
 
 /* Encapsulates labels and slider */
@@ -112,3 +118,31 @@ a {
   margin: 10px;
   padding-top: 10px;
 }
+
+.prog {
+  width: 700px;
+  height: 10px;
+  margin: 10px;
+  padding: 0px;
+}
+
+/* Tabs */
+
+#tabs {
+	font-size: 0.9em;
+}
+
+h1 {
+	font-size: 1.2em;
+	font-weight: normal;
+}
+
+/* Footer */
+div.footer {
+	width: 700px;
+	margin-left: auto;
+	margin-right: auto;
+	height: 30px;
+	font-size: 0.7em;
+}
+
