--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -1,64 +1,126 @@
 <% form_for @survey do |f| %>
   <%= f.error_messages %>
-  <p>
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name %>
-  </p>
-  <p>
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %>
-  </p>
-  <p>
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
-  </p>
 
-  <!--
-  <p>
-    <%= f.label :total_score %><br />
-    <%= f.text_field :total_score %>
-  </p>
-  <p>
-    <%= f.label :rq_score %><br />
-    <%= f.text_field :rq_score %>
-  </p>
-  -->
+<div id="tabs">
+  <ul>
+  	<li><a href="#fragment-0"><span>Personal Info</span></a></li>
+  	<li><a href="#fragment-1"><span>Page 1</span></a></li>
+  	<li><a href="#fragment-2"><span>Page 2</span></a></li>
+  	<li><a href="#fragment-3"><span>Page 3</span></a></li>
+  	<li><a href="#fragment-4"><span>Page 4</span></a></li>
+  	<li><a href="#fragment-5"><span>Page 5</span></a></li>
+  	<li><a href="#fragment-6"><span>Page 6</span></a></li>
+  	<li><a href="#fragment-7"><span>Page 7</span></a></li>
+  	<li><a href="#fragment-8"><span>Submit</span></a></li>
+  </ul>
 
-  <%# todo: paginate %>
+  <div id="fragment-0">
+    <p>Before you start the assessment, please provide us with some contact information.  We'd also like to know your age and gender - as it will help us show you results customized to where you are in life.</p>
+	<p>&nbsp;</p>
+  	<p>
+    	<%= f.label :first_name %><br />
+    	<%= f.text_field :first_name, :size => 15 %>
+  	</p>
+  	<p>
+    	<%= f.label :last_name %><br />
+    	<%= f.text_field :last_name, :size => 15 %>
+  	</p>
+  	<p>
+    	<%= f.label :email, "E-mail Address" %><br />
+    	<%= f.text_field :email, :size => 20 %>
+  	</p>
+	<p>&nbsp;</p>
+	<a href="#" onClick="next_tab();">[Next]</a>
+  </div>
 
-  <p>&nbsp;</p>
-  <hr />
-  <p>&nbsp;</p>
+  <% 
+  	# Pre-sort array and randomize
+  	randomized_responses = @survey.responses.sort_by { rand } 
+  %>
 
-  <% f.fields_for :responses do |r| %>
-    <%# Assemble response form from properties of the associated question %>
-  	<%= r.label :value, r.object.question.text %><br />
-	<%# todo: randomize directions %>
+  <% (1..7).each do |page| %>
 
-	<div class="slide">
-		<div align="left" class="left-label">
-			<%= r.object.question.lower_title %>
-		</div>
-		<div align="right" class="right-label">
-			<%= r.object.question.upper_title %>
-		</div>
-		<div class="slider" id="slider_<%= r.object.question.id - 1 %>"></div>
-	</div>
-	<script type="text/javascript">
-		$("#slider_<%= r.object.question.id - 1 %>").slider({ 
-			max: 10, 
-			min: 1, 
-			value: <%= r.object.value %>,
-			change: function(event, ui) {
-				$("#survey_responses_attributes_<%= r.object.question.id - 1 %>_value").val(ui.value);
-			}
-		} );
-	</script>
-	<%= r.hidden_field :value, :value => r.object.value %>
-	<%= r.hidden_field :question_id, :value => r.object.question.id %>
-	<br /><br />
+  <div id="fragment-<%= page %>">
+  	<!-- Progress/Nav -->
+  	<div class="prog">
+	  <div align="left" class="left-label">
+		<a href="#" onClick="prev_tab();">[Back]</a>
+	  </div>
+	  <div align="right" class="right-label">
+		<a href="#" onClick="next_tab();">[Next]</a>
+	  </div>
+	  <div class="progress" id="progress_page_<%= page %>"</div>
+	  <script type="text/javascript">
+		  $("#progress_page_<%= page %>").progressbar({ 
+			  value: ((<%= page %>/9)*100)
+			  });
+	  </script>
+    </div>
+	<p>&nbsp;</p>
+	<!-- End Progress/Nav -->
+
+
+  <%# We can sort the arrays as we wish and pass an item to fields_for, however %>
+  <%# the :collection is still specified as a parameter to fields_for for numbering %>
+
+  <% randomized_responses.slice((page-1)*8, 8).each do |response| %>
+
+    <% f.fields_for :responses, response do |r| %>
+      <%# Assemble response form from properties of the associated question %>
+  	  <%= r.label :value, r.object.question.text %><br />
+	  <%# todo: randomize directions %>
+  
+	  <div class="slide">
+		  <div align="left" class="left-label">
+			  <%= r.object.question.lower_title %>
+		  </div>
+		  <div align="right" class="right-label">
+			  <%= r.object.question.upper_title %>
+		  </div>
+		  <div class="slider" id="slider_<%= r.object.question.id - 1 %>"></div>
+	  </div>
+	  <script type="text/javascript">
+		  $("#slider_<%= r.object.question.id - 1 %>").slider({ 
+			  max: 10, 
+			  min: 1, 
+			  value: <%= r.object.value %>,
+			  change: function(event, ui) {
+				  $("#survey_responses_attributes_<%= r.object.question.id - 1 %>_value").val(ui.value);
+			  }
+		  } );
+	  </script>
+	  <%= r.hidden_field :value, :value => r.object.value %>
+	  <%= r.hidden_field :question_id, :value => r.object.question.id %>
+	  <br /><br />
+    <% end %>
+
   <% end %>
 
-  <p><%= f.submit "Submit" %></p>
+  	<!-- Progress/Nav -->
+  	<div class="prog">
+	  <div align="left" class="left-label">
+		<a href="#" onClick="prev_tab();">[Back]</a>
+	  </div>
+	  <div align="right" class="right-label">
+		<a href="#" onClick="next_tab();">[Next]</a>
+	  </div>
+	  <div class="progress" id="progress_bottom"</div>
+	  	  <!-- No progress bar for now -->
+    </div>
+	<!-- End Progress/Nav -->
+
+  </div>
+
+  <% end %>
+
+  <div id="fragment-8">
+  	<p>You're finished!  Click to submit your assessment and see your results!</p>
+
+  	<p><%= f.submit "Submit" %></p>
+
+  </div>
+
+</div>
+<!-- End Tabs -->
 
 <% end %>
