--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -77,19 +77,19 @@
 		  <div align="right" class="right-label">
 			  <%= r.object.question.upper_title %>
 		  </div>
-		  <div class="slider" id="slider_<%= r.object.question.id - 1 %>"></div>
+		  <div class="slider" id="slider_<%= r.object.question.id %>"></div>
 	  </div>
 	  <script type="text/javascript">
-		  $("#slider_<%= r.object.question.id - 1 %>").slider({ 
+		  $("#slider_<%= r.object.question.id  %>").slider({ 
 			  max: 10, 
 			  min: 1, 
 			  value: <%= r.object.value %>,
 			  change: function(event, ui) {
-				  $("#survey_responses_attributes_<%= r.object.question.id - 1 %>_value").val(ui.value);
+				  $("#response_value_<%= r.object.question.id %>").val(ui.value);
 			  }
 		  } );
 	  </script>
-	  <%= r.hidden_field :value, :value => r.object.value %>
+	  <%= r.hidden_field :value, :value => r.object.value, :id => "response_value_#{ r.object.question.id }"  %>
 	  <%= r.hidden_field :question_id, :value => r.object.question.id %>
 	  <br /><br />
     <% end %>
