Some changes to show

--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -24,12 +24,14 @@
 <p><small>Your Normalized Score represents your relational intelligence measured on a scale from 1 to 100.
 This number is an absolute rating and has no correlation to the general population.</small></p>
 
+<!--
 <p>
   <strong>Standardized RQ:</strong>
   <%=h @survey.std_rq %>
 </p>
 <p><small>Your Standardized RQ is a rough approximation of what your score might be if this assessment were
 scored like a standard IQ test.  A score of 100 represents an average person on this scale</small></p>
+-->
 
 <!-- Categories -->
 <% 
@@ -47,9 +49,15 @@ scored like a standard IQ test.  A score of 100 represents an average person on 
 <p>
   <strong>Category Breakdown</strong>
 </p>
-<p><small>The chart above shows how well your relational weaknesses fit against some stereotypical 
-scenarios painted in the book.  It might make sense to focus on the chapters that deal with the issues
-identified here most strongly.</small></p>
+<p><small>The chart above shows a breakdown of the seven distinct components of your relational quotient
+score as it correlates to
+ <em><a href="http://www.amazon.com/Relational-Intelligence-Leaders-Influence-Leadership/dp/047043869X/ref=sr_1_1?ie=UTF8&s=books&qid=1252890895&sr=8-1" target="_blank">Relational Intelligence</a></em>
+ by Steve Saccone.  Your results can offer a picture of what your strengths and weaknesses are in relational
+ intelligence.  <br/><br/> In effort to take next steps to grow your personal life, we suggest reading or re-reading the 
+ chapters in the book that correlate with the areas of both strength and weakness from your RQ score so that
+ you can develop an action plan for growth.  In addition, there are workshops and consulting offered through 
+ the book's website: <a href="http://www.relationalintelligence.info">www.relationalintelligence.info</a>
+</small></p>
 
 <!-- Age Scatter (tba) -->
 
