Added an e-mail confirmation field

--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -29,6 +29,10 @@
     	<%= f.label :email, "E-mail Address" %><br />
     	<%= f.text_field :email, :size => 20 %>
   	</p>
+  	<p>
+    	<%= f.label :email_confirmation, "Confirm E-mail Address" %><br />
+    	<%= f.text_field :email_confirmation, :size => 20 %>
+  	</p>
 	<p>&nbsp;</p>
 	<a href="#" onClick="next_tab();">[Next]</a>
   </div>
