Added hostname (hard) to e-mail URL

--- a/app/views/mailman/survey_completed.erb
+++ b/app/views/mailman/survey_completed.erb
@@ -8,7 +8,7 @@ Your Normalized Score represents your relational intelligence measured on a scal
 This number is an absolute rating and has no correlation to the general population.
 
 You can view your complete report again by going to this URL:
-<%= url_for @survey %>
+http://rq.relationalintelligence.info<%= url_for @survey %>
 
 Thanks,
 
