Auto-resize bar chart

--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -43,7 +43,7 @@ scored like a standard IQ test.  A score of 100 represents an average person on 
 %>
 
 <div class="chart">
-  <img class="chart" src="http://chart.apis.google.com/chart?chs=500x150&chxt=y&chf=bg,s,333333&chco=<%= cs_colors.join("|") %>&cht=bhs&chd=t:<%= cs.compact.join(",") %>&chdl=<%=h cs_legend.join("|") %>" /> 
+  <img class="chart" src="http://chart.apis.google.com/chart?chs=500x150&chxt=y&chf=bg,s,333333&chco=<%= cs_colors.join("|") %>&cht=bhs&chbh=a&chd=t:<%= cs.compact.join(",") %>&chdl=<%=h cs_legend.join("|") %>" /> 
 </div>
 
 <p>
