Fixed typo in e-mail

--- a/app/views/mailman/survey_completed.erb
+++ b/app/views/mailman/survey_completed.erb
@@ -13,6 +13,6 @@ http://rq.relationalintelligence.info<%= url_for @survey %>
 Thanks,
 
 The Relational Intelligence Team
-www.relationalintelligence.com
+www.relationalintelligence.info
 
 
