--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,5 +35,19 @@
 	  <p>&copy;2009 Relational Intellegence.  All Rights Reserved.
 	  &nbsp;&nbsp;Comments? Please contact us via <a href="mailto:webmaster@relationalintelligence.info">e-mail</a>.</p>
 	</div>
+
+<!-- Google Analytics -->
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-10695561-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
+<!--  End -->
+
+
   </body>
 </html>
