--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -108,7 +108,7 @@
 	  <div align="right" class="right-label">
 		<a href="#" onClick="next_tab();">[Next]</a>
 	  </div>
-	  <div class="progress" id="progress_bottom"</div>
+	  <div class="progress" id="progress_bottom"></div>
 	  	  <!-- No progress bar for now -->
         </div>
 	<!-- End Progress/Nav -->
