Simple approximation to RQ Score meaning

--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -23,6 +23,20 @@
 </p>
 <p><small>Your Normalized RQ Score represents your relational intelligence measured on a scale from 1 to 100.
 This number is an absolute rating and has no correlation to the general population.</small></p>
+<p>
+  <strong>What does my score mean?</strong>
+</p>
+<p><small>While we've just launched this site and are still getting a feel for how your number
+compares to the general population,  here are some general guidelines for what your total score might
+indicate.<br/>
+<ul>
+   <li><b>&nbsp;0 to 60</b> - Below Average<br/></li>
+   <li><b>60 to 75</b> - Average<br/></li>
+   <li><b>75 to 100</b> - Above Average<br/></li>
+</ul>
+</small>
+</p>
+<p>&nbsp;</p>
 
 <!--
 <p>
