--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,16 +5,19 @@
     <title><%= h(yield(:title) || "Untitled") %></title>
 
     <%= stylesheet_link_tag 'application' %>
-	<!--
     <%= javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js' %>
     <%= javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js' %>
-	-->
+	<link type="text/css" href="http://jquery-ui.googlecode.com/svn/tags/1.7.2/themes/base/ui.all.css" rel="stylesheet" />
+<!--
+
+	<!--
 	<link type="text/css" href="http://jqueryui.com/latest/themes/base/ui.all.css" rel="stylesheet" />
 	<script type="text/javascript" src="http://jqueryui.com/latest/jquery-1.3.2.js"></script>
 	<script type="text/javascript" src="http://jqueryui.com/latest/ui/ui.core.js"></script>
 	<script type="text/javascript" src="http://jqueryui.com/latest/ui/ui.slider.js"></script>
 	<script type="text/javascript" src="http://jqueryui.com/latest/ui/ui.tabs.js"></script>
 	<script type="text/javascript" src="http://jqueryui.com/latest/ui/ui.progressbar.js"></script>
+	-->
 
     <%= javascript_include_tag 'application' %>
     <%= yield(:head) %>
